--- a/Runtime/D3T.UnityNoise.asmdef
+++ b/Runtime/D3T.UnityNoise.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "TEMPLATE",
+    "name": "D3T.UnityNoise",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
